[package]
name = "bunnysync"
version = "1.2.1"
description = "A tool to sync files to bunny.net storage"
edition = "2024"

[dependencies]
ureq = { version = "3.0", features = ["json"] }
clap = { version = "4.5", features = ["derive", "env"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2.5"
glob-match = "0.2"
